<resources translatable="false">
    <string name="app_name">Agora Live</string>
    <string name="app_agora">Agora</string>
    <string name="app_title_home">Home</string>
    <string name="app_title_find">Find</string>
    <string name="app_title_mine">About</string>
    <string name="app_action_settings">Settings</string>

    <string name="app_exit">Exit</string>
    <string name="app_user_agreement">Terms of Service</string>
    <string name="app_privacy_agreement">Privacy Policy</string>
    <string name="app_personal_info_collection_checklist">Personal Information Collection Checklist</string>
    <string name="app_third_party_info_data_sharing">Third-Party Information Data Sharing</string>
    <string name="app_and">and</string>

    <string name="app_confirm_deletion">Are you sure you want to delete it?</string>
    <string name="app_about_us">About Us</string>

    <string name="app_welcome_experience">Start a new live experience with</string>

    <string name="app_plus_86">+86</string>
    <string name="app_logout">Logout</string>
    <string name="app_logoff_account">Delete account</string>
    <string name="app_debug_mode">Debug mode</string>
    <string name="app_logoff">Delete</string>

    <string name="app_show_live">Live Streaming</string>
    <string name="app_e_commerce">E-Commerce</string>
    <string name="app_chat_room">Voice Chat</string>
    <string name="app_coming_soon">Coming Soon</string>
    <string name="app_ktv">Karaoke</string>


    <string name="app_about_app">About App</string>
    <string name="app_about_name">Agora Live</string>
    <string name="app_about_version">Version</string>
    <string name="app_about_scene_version">Scene Version</string>
    <string name="app_about_chat_room">Chat Room</string>
    <string name="app_about_chat_room_spatial">Chat Room SA Mode</string>
    <string name="app_about_karaoke">Karaoke</string>
    <string name="app_about_show">Live Streaming</string>
    <string name="app_about_customer_service">Customer Service</string>
    <string name="app_about_official_website">Official Website</string>
    <string name="app_about_phone_cancel">Cancel</string>
    <string name="app_mine_current_version">Version %s</string>

    <string name="app_debug_open">Debug Mode on</string>
    <string name="app_debug_off">Debug Mode Off</string>
    <string name="app_debug_switch">Switch</string>
    <string name="app_debug_switch_env">Switch server</string>
    <string name="app_release_env">Production</string>
    <string name="app_dev_env">Test</string>
    <string name="app_exit_debug">Exit debug mode</string>
    <string name="app_exit_debug_title">Are you sure you want to exit debug mode?</string>
    <string name="app_exit_debug_tip">After exiting debug mode, the settings page will return to its normal state.</string>
    <string name="app_agree_tip">Please agree to the User Agreement and Privacy Policy.</string>
    <string name="app_login_success_tip">Login Succeeded</string>
    <string name="app_edit_success">Modified</string>

    <string name="app_enter_now">Enter Now</string>
    <string name="app_policy_accept">I accept the #Terms of Service#</string>
    <string name="app_check_tip">Please check</string>

    <string name="app_console_sso">Agora Console SSO</string>
    <string name="app_login_with_a_code">Login with a code</string>
    <string name="app_invite_code">Invite Code</string>
    <string name="app_my_invite_code">My Invite Code</string>
    <string name="app_generate_a_code_for_friends">Generate a code for your friends</string>
    <string name="app_generate_a_code">Generate A Code</string>
    <string name="app_share_invite_code">Share to your friends</string>
    <string name="app_copy">Copy</string>
    <string name="app_copy_succeed">Copied</string>
    <string name="app_input_invite_code">Input Your Invite Code</string>
    <string name="app_login_expired">Login expired</string>
    <string name="app_invalid_invite_code">Invalid Code. Please try again.</string>
    <string name="app_too_many_attempts">Too many attempts. Please try it later.</string>
    <string name="app_logout_tips">Are you sure you want to logout?</string>

</resources>