<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_invite_bg"
    android:theme="@style/Theme.Material3.Light.NoActionBar"
    android:fitsSystemWindows="true">
    
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivInviteTopBg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@mipmap/app_invite_top_bg"/>

    <io.agora.scene.widget.CommonTitleView
        android:id="@+id/title_view"
        style="@style/title_view"
        app:ctv_centerText="@string/app_invite_code"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:background="@mipmap/bg_invite"
        app:layout_constraintDimensionRatio="335:526"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_view">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.19" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline63"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.63" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:gravity="center"
            android:text="@string/app_my_invite_code"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/guideline19"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvGenerateCodeTips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_generate_a_code_to_friends"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline40" />

        <TextView
            android:id="@+id/tvInviteCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="*****"
            android:textColor="@color/black"
            android:textSize="48sp"
            android:letterSpacing="0.2"
            tools:text="67283h!"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGenerateCodeTips" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="60dp"
            app:layout_constraintTop_toBottomOf="@id/tvInviteCode"
            app:dividerColor="@color/black_20_percent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGenerateCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_generate_a_code"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@android:color/black"
            app:cornerRadius="32dp"
            app:backgroundTint="@android:color/white"
            app:rippleColor="#C9C9C9"
            android:layout_marginHorizontal="60dp"
            app:layout_constraintTop_toBottomOf="@id/guideline63"
            android:paddingVertical="14dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>