<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_welcome_bg"
    android:theme="@style/Theme.Material3.Light.NoActionBar">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivAppLogo"
        android:layout_width="match_parent"
        android:layout_height="800dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/app_welcome_human_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivAppOverlay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/app_welcome_bg_overlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginWithSSO"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="42dp"
        android:layout_marginBottom="15dp"
        android:gravity="start|center_vertical"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingVertical="14dp"
        android:text="@string/app_console_sso"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:backgroundTint="@android:color/white"
        app:cornerRadius="32dp"
        app:icon="@mipmap/app_sso_icon"
        app:iconGravity="start"
        app:iconPadding="25dp"
        app:iconSize="32dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginWithCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#C9C9C9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginWithCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="42dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/app_login_gradient_stoke_selector"
        android:gravity="start|center_vertical"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingVertical="14dp"
        android:text="@string/app_console_sso"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:cornerRadius="32dp"
        app:icon="@mipmap/app_code_icon"
        app:iconGravity="start"
        app:iconPadding="32dp"
        app:iconSize="32dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/cb_policy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#C9C9C9" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivText"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:src="@mipmap/app_welcome_text_icon"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginWithSSO"
        app:layout_constraintEnd_toEndOf="@id/btnLoginWithCode"
        app:layout_constraintStart_toStartOf="@id/btnLoginWithCode" />

    <TextView
        android:id="@+id/tv_check_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-10dp"
        android:background="@mipmap/app_welcome_check_tip_bg"
        android:gravity="center"
        android:text="@string/app_check_tip"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/cb_policy"
        app:layout_constraintStart_toStartOf="@id/cb_policy"
        tools:visibility="invisible" />

    <CheckBox
        android:id="@+id/cb_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@android:color/transparent"
        android:button="@null"
        android:checked="false"
        android:drawableStart="@drawable/app_welcome_cb_policy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_policy"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_policy_accept"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/cb_policy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/cb_policy"
        app:layout_constraintTop_toTopOf="@id/cb_policy" />

    <!--    <Button-->
    <!--        android:id="@+id/btn_enter_room"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginHorizontal="35dp"-->
    <!--        android:background="@drawable/app_welcome_btn_enter_room"-->
    <!--        android:text="@string/app_enter_now"-->
    <!--        android:textAllCaps="false"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/horizontal90"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <include
        android:id="@+id/includeLoginWithCode"
        layout="@layout/app_view_login_with_code" />
</androidx.constraintlayout.widget.ConstraintLayout>